全书代码/chapter3/y.output
   0  $accept : program $end

   1  program : exp

   2  decs : dec decs
   3       |

   4  dec : tydec
   5      | vardec
   6      | fundec

   7  tydec : TYPE ID EQ ty

   8  ty : ID
   9     | LBRACE tyfields RBRACE
  10     | ARRAY OF ID

  11  tyfields : tyfield
  12           |

  13  tyfield : ID COLON ID
  14          | tyfield COMMA ID COLON ID

  15  vardec : VAR ID ASSIGN exp
  16         | VAR ID COLON ID ASSIGN exp

  17  fundec : FUNCTION ID LPAREN tyfields RPAREN EQ exp
  18         | FUNCTION ID LPAREN tyfields RPAREN COLON ID EQ exp

  19  exp : lvalue
  20      | INT
  21      | STRING
  22      | NIL
  23      | LPAREN expseq RPAREN
  24      | LPAREN RPAREN
  25      | MINUS exp
  26      | exp PLUS exp
  27      | exp MINUS exp
  28      | exp TIMES exp
  29      | exp DIVIDE exp
  30      | exp EQ exp
  31      | exp NEQ exp
  32      | exp LT exp
  33      | exp LE exp
  34      | exp GT exp
  35      | exp GE exp
  36      | exp AND exp
  37      | exp OR exp
  38      | funcall
  39      | ID LBRACK exp RBRACK OF exp
  40      | ID LBRACE RBRACE
  41      | ID LBRACE ass RBRACE
  42      | lvalue ASSIGN exp
  43      | IF exp THEN exp
  44      | IF exp THEN exp ELSE exp
  45      | WHILE exp DO exp
  46      | FOR ID ASSIGN exp TO exp DO exp
  47      | BREAK
  48      | LET decs IN END
  49      | LET decs IN expseq END
  50      | LPAREN error RPAREN
  51      | error SEMICOLON exp

  52  funcall : ID LPAREN RPAREN
  53          | ID LPAREN para RPAREN

  54  para : exp
  55       | exp COMMA para

  56  ass : ID EQ exp
  57      | ID EQ exp COMMA ass

  58  expseq : exp
  59         | exp SEMICOLON expseq

  60  lvalue : ID
  61         | lvalue DOT ID
  62         | lvalue LBRACK exp RBRACK
  63         | ID LBRACK exp RBRACK

state 0
	$accept : . program $end  (0)

	error  shift 1
	ID  shift 2
	STRING  shift 3
	INT  shift 4
	LPAREN  shift 5
	MINUS  shift 6
	IF  shift 7
	WHILE  shift 8
	FOR  shift 9
	LET  shift 10
	BREAK  shift 11
	NIL  shift 12
	.  error

	program  goto 13
	exp  goto 14
	lvalue  goto 15
	funcall  goto 16


state 1
	exp : error . SEMICOLON exp  (51)

	SEMICOLON  shift 17
	.  error


2: shift/reduce conflict (shift 19, reduce 60) on LBRACK
state 2
	exp : ID . LBRACK exp RBRACK OF exp  (39)
	exp : ID . LBRACE RBRACE  (40)
	exp : ID . LBRACE ass RBRACE  (41)
	funcall : ID . LPAREN RPAREN  (52)
	funcall : ID . LPAREN para RPAREN  (53)
	lvalue : ID .  (60)
	lvalue : ID . LBRACK exp RBRACK  (63)

	LPAREN  shift 18
	LBRACK  shift 19
	LBRACE  shift 20
	$end  reduce 60
	COMMA  reduce 60
	SEMICOLON  reduce 60
	RPAREN  reduce 60
	RBRACK  reduce 60
	RBRACE  reduce 60
	DOT  reduce 60
	PLUS  reduce 60
	MINUS  reduce 60
	TIMES  reduce 60
	DIVIDE  reduce 60
	EQ  reduce 60
	NEQ  reduce 60
	LT  reduce 60
	LE  reduce 60
	GT  reduce 60
	GE  reduce 60
	AND  reduce 60
	OR  reduce 60
	ASSIGN  reduce 60
	THEN  reduce 60
	ELSE  reduce 60
	TO  reduce 60
	DO  reduce 60
	IN  reduce 60
	END  reduce 60
	FUNCTION  reduce 60
	VAR  reduce 60
	TYPE  reduce 60


state 3
	exp : STRING .  (21)

	.  reduce 21


state 4
	exp : INT .  (20)

	.  reduce 20


state 5
	exp : LPAREN . expseq RPAREN  (23)
	exp : LPAREN . RPAREN  (24)
	exp : LPAREN . error RPAREN  (50)

	error  shift 21
	ID  shift 2
	STRING  shift 3
	INT  shift 4
	LPAREN  shift 5
	RPAREN  shift 22
	MINUS  shift 6
	IF  shift 7
	WHILE  shift 8
	FOR  shift 9
	LET  shift 10
	BREAK  shift 11
	NIL  shift 12
	.  error

	exp  goto 23
	lvalue  goto 15
	expseq  goto 24
	funcall  goto 16


state 6
	exp : MINUS . exp  (25)

	error  shift 1
	ID  shift 2
	STRING  shift 3
	INT  shift 4
	LPAREN  shift 5
	MINUS  shift 6
	IF  shift 7
	WHILE  shift 8
	FOR  shift 9
	LET  shift 10
	BREAK  shift 11
	NIL  shift 12
	.  error

	exp  goto 25
	lvalue  goto 15
	funcall  goto 16


state 7
	exp : IF . exp THEN exp  (43)
	exp : IF . exp THEN exp ELSE exp  (44)

	error  shift 1
	ID  shift 2
	STRING  shift 3
	INT  shift 4
	LPAREN  shift 5
	MINUS  shift 6
	IF  shift 7
	WHILE  shift 8
	FOR  shift 9
	LET  shift 10
	BREAK  shift 11
	NIL  shift 12
	.  error

	exp  goto 26
	lvalue  goto 15
	funcall  goto 16


state 8
	exp : WHILE . exp DO exp  (45)

	error  shift 1
	ID  shift 2
	STRING  shift 3
	INT  shift 4
	LPAREN  shift 5
	MINUS  shift 6
	IF  shift 7
	WHILE  shift 8
	FOR  shift 9
	LET  shift 10
	BREAK  shift 11
	NIL  shift 12
	.  error

	exp  goto 27
	lvalue  goto 15
	funcall  goto 16


state 9
	exp : FOR . ID ASSIGN exp TO exp DO exp  (46)

	ID  shift 28
	.  error


state 10
	exp : LET . decs IN END  (48)
	exp : LET . decs IN expseq END  (49)
	decs : .  (3)

	FUNCTION  shift 29
	VAR  shift 30
	TYPE  shift 31
	IN  reduce 3

	decs  goto 32
	dec  goto 33
	tydec  goto 34
	vardec  goto 35
	fundec  goto 36


state 11
	exp : BREAK .  (47)

	.  reduce 47


state 12
	exp : NIL .  (22)

	.  reduce 22


state 13
	$accept : program . $end  (0)

	$end  accept


state 14
	program : exp .  (1)
	exp : exp . PLUS exp  (26)
	exp : exp . MINUS exp  (27)
	exp : exp . TIMES exp  (28)
	exp : exp . DIVIDE exp  (29)
	exp : exp . EQ exp  (30)
	exp : exp . NEQ exp  (31)
	exp : exp . LT exp  (32)
	exp : exp . LE exp  (33)
	exp : exp . GT exp  (34)
	exp : exp . GE exp  (35)
	exp : exp . AND exp  (36)
	exp : exp . OR exp  (37)

	PLUS  shift 37
	MINUS  shift 38
	TIMES  shift 39
	DIVIDE  shift 40
	EQ  shift 41
	NEQ  shift 42
	LT  shift 43
	LE  shift 44
	GT  shift 45
	GE  shift 46
	AND  shift 47
	OR  shift 48
	$end  reduce 1


state 15
	exp : lvalue .  (19)
	exp : lvalue . ASSIGN exp  (42)
	lvalue : lvalue . DOT ID  (61)
	lvalue : lvalue . LBRACK exp RBRACK  (62)

	LBRACK  shift 49
	DOT  shift 50
	ASSIGN  shift 51
	$end  reduce 19
	COMMA  reduce 19
	SEMICOLON  reduce 19
	RPAREN  reduce 19
	RBRACK  reduce 19
	RBRACE  reduce 19
	PLUS  reduce 19
	MINUS  reduce 19
	TIMES  reduce 19
	DIVIDE  reduce 19
	EQ  reduce 19
	NEQ  reduce 19
	LT  reduce 19
	LE  reduce 19
	GT  reduce 19
	GE  reduce 19
	AND  reduce 19
	OR  reduce 19
	THEN  reduce 19
	ELSE  reduce 19
	TO  reduce 19
	DO  reduce 19
	IN  reduce 19
	END  reduce 19
	FUNCTION  reduce 19
	VAR  reduce 19
	TYPE  reduce 19


state 16
	exp : funcall .  (38)

	.  reduce 38


state 17
	exp : error SEMICOLON . exp  (51)

	error  shift 1
	ID  shift 2
	STRING  shift 3
	INT  shift 4
	LPAREN  shift 5
	MINUS  shift 6
	IF  shift 7
	WHILE  shift 8
	FOR  shift 9
	LET  shift 10
	BREAK  shift 11
	NIL  shift 12
	.  error

	exp  goto 52
	lvalue  goto 15
	funcall  goto 16


state 18
	funcall : ID LPAREN . RPAREN  (52)
	funcall : ID LPAREN . para RPAREN  (53)

	error  shift 1
	ID  shift 2
	STRING  shift 3
	INT  shift 4
	LPAREN  shift 5
	RPAREN  shift 53
	MINUS  shift 6
	IF  shift 7
	WHILE  shift 8
	FOR  shift 9
	LET  shift 10
	BREAK  shift 11
	NIL  shift 12
	.  error

	exp  goto 54
	lvalue  goto 15
	funcall  goto 16
	para  goto 55


state 19
	exp : ID LBRACK . exp RBRACK OF exp  (39)
	lvalue : ID LBRACK . exp RBRACK  (63)

	error  shift 1
	ID  shift 2
	STRING  shift 3
	INT  shift 4
	LPAREN  shift 5
	MINUS  shift 6
	IF  shift 7
	WHILE  shift 8
	FOR  shift 9
	LET  shift 10
	BREAK  shift 11
	NIL  shift 12
	.  error

	exp  goto 56
	lvalue  goto 15
	funcall  goto 16


state 20
	exp : ID LBRACE . RBRACE  (40)
	exp : ID LBRACE . ass RBRACE  (41)

	ID  shift 57
	RBRACE  shift 58
	.  error

	ass  goto 59


state 21
	exp : LPAREN error . RPAREN  (50)
	exp : error . SEMICOLON exp  (51)

	SEMICOLON  shift 17
	RPAREN  shift 60
	.  error


state 22
	exp : LPAREN RPAREN .  (24)

	.  reduce 24


state 23
	exp : exp . PLUS exp  (26)
	exp : exp . MINUS exp  (27)
	exp : exp . TIMES exp  (28)
	exp : exp . DIVIDE exp  (29)
	exp : exp . EQ exp  (30)
	exp : exp . NEQ exp  (31)
	exp : exp . LT exp  (32)
	exp : exp . LE exp  (33)
	exp : exp . GT exp  (34)
	exp : exp . GE exp  (35)
	exp : exp . AND exp  (36)
	exp : exp . OR exp  (37)
	expseq : exp .  (58)
	expseq : exp . SEMICOLON expseq  (59)

	SEMICOLON  shift 61
	PLUS  shift 37
	MINUS  shift 38
	TIMES  shift 39
	DIVIDE  shift 40
	EQ  shift 41
	NEQ  shift 42
	LT  shift 43
	LE  shift 44
	GT  shift 45
	GE  shift 46
	AND  shift 47
	OR  shift 48
	RPAREN  reduce 58
	END  reduce 58


state 24
	exp : LPAREN expseq . RPAREN  (23)

	RPAREN  shift 62
	.  error


state 25
	exp : MINUS exp .  (25)
	exp : exp . PLUS exp  (26)
	exp : exp . MINUS exp  (27)
	exp : exp . TIMES exp  (28)
	exp : exp . DIVIDE exp  (29)
	exp : exp . EQ exp  (30)
	exp : exp . NEQ exp  (31)
	exp : exp . LT exp  (32)
	exp : exp . LE exp  (33)
	exp : exp . GT exp  (34)
	exp : exp . GE exp  (35)
	exp : exp . AND exp  (36)
	exp : exp . OR exp  (37)

	.  reduce 25


state 26
	exp : exp . PLUS exp  (26)
	exp : exp . MINUS exp  (27)
	exp : exp . TIMES exp  (28)
	exp : exp . DIVIDE exp  (29)
	exp : exp . EQ exp  (30)
	exp : exp . NEQ exp  (31)
	exp : exp . LT exp  (32)
	exp : exp . LE exp  (33)
	exp : exp . GT exp  (34)
	exp : exp . GE exp  (35)
	exp : exp . AND exp  (36)
	exp : exp . OR exp  (37)
	exp : IF exp . THEN exp  (43)
	exp : IF exp . THEN exp ELSE exp  (44)

	PLUS  shift 37
	MINUS  shift 38
	TIMES  shift 39
	DIVIDE  shift 40
	EQ  shift 41
	NEQ  shift 42
	LT  shift 43
	LE  shift 44
	GT  shift 45
	GE  shift 46
	AND  shift 47
	OR  shift 48
	THEN  shift 63
	.  error


state 27
	exp : exp . PLUS exp  (26)
	exp : exp . MINUS exp  (27)
	exp : exp . TIMES exp  (28)
	exp : exp . DIVIDE exp  (29)
	exp : exp . EQ exp  (30)
	exp : exp . NEQ exp  (31)
	exp : exp . LT exp  (32)
	exp : exp . LE exp  (33)
	exp : exp . GT exp  (34)
	exp : exp . GE exp  (35)
	exp : exp . AND exp  (36)
	exp : exp . OR exp  (37)
	exp : WHILE exp . DO exp  (45)

	PLUS  shift 37
	MINUS  shift 38
	TIMES  shift 39
	DIVIDE  shift 40
	EQ  shift 41
	NEQ  shift 42
	LT  shift 43
	LE  shift 44
	GT  shift 45
	GE  shift 46
	AND  shift 47
	OR  shift 48
	DO  shift 64
	.  error


state 28
	exp : FOR ID . ASSIGN exp TO exp DO exp  (46)

	ASSIGN  shift 65
	.  error


state 29
	fundec : FUNCTION . ID LPAREN tyfields RPAREN EQ exp  (17)
	fundec : FUNCTION . ID LPAREN tyfields RPAREN COLON ID EQ exp  (18)

	ID  shift 66
	.  error


state 30
	vardec : VAR . ID ASSIGN exp  (15)
	vardec : VAR . ID COLON ID ASSIGN exp  (16)

	ID  shift 67
	.  error


state 31
	tydec : TYPE . ID EQ ty  (7)

	ID  shift 68
	.  error


state 32
	exp : LET decs . IN END  (48)
	exp : LET decs . IN expseq END  (49)

	IN  shift 69
	.  error


state 33
	decs : dec . decs  (2)
	decs : .  (3)

	FUNCTION  shift 29
	VAR  shift 30
	TYPE  shift 31
	IN  reduce 3

	decs  goto 70
	dec  goto 33
	tydec  goto 34
	vardec  goto 35
	fundec  goto 36


state 34
	dec : tydec .  (4)

	.  reduce 4


state 35
	dec : vardec .  (5)

	.  reduce 5


state 36
	dec : fundec .  (6)

	.  reduce 6


state 37
	exp : exp PLUS . exp  (26)

	error  shift 1
	ID  shift 2
	STRING  shift 3
	INT  shift 4
	LPAREN  shift 5
	MINUS  shift 6
	IF  shift 7
	WHILE  shift 8
	FOR  shift 9
	LET  shift 10
	BREAK  shift 11
	NIL  shift 12
	.  error

	exp  goto 71
	lvalue  goto 15
	funcall  goto 16


state 38
	exp : exp MINUS . exp  (27)

	error  shift 1
	ID  shift 2
	STRING  shift 3
	INT  shift 4
	LPAREN  shift 5
	MINUS  shift 6
	IF  shift 7
	WHILE  shift 8
	FOR  shift 9
	LET  shift 10
	BREAK  shift 11
	NIL  shift 12
	.  error

	exp  goto 72
	lvalue  goto 15
	funcall  goto 16


state 39
	exp : exp TIMES . exp  (28)

	error  shift 1
	ID  shift 2
	STRING  shift 3
	INT  shift 4
	LPAREN  shift 5
	MINUS  shift 6
	IF  shift 7
	WHILE  shift 8
	FOR  shift 9
	LET  shift 10
	BREAK  shift 11
	NIL  shift 12
	.  error

	exp  goto 73
	lvalue  goto 15
	funcall  goto 16


state 40
	exp : exp DIVIDE . exp  (29)

	error  shift 1
	ID  shift 2
	STRING  shift 3
	INT  shift 4
	LPAREN  shift 5
	MINUS  shift 6
	IF  shift 7
	WHILE  shift 8
	FOR  shift 9
	LET  shift 10
	BREAK  shift 11
	NIL  shift 12
	.  error

	exp  goto 74
	lvalue  goto 15
	funcall  goto 16


state 41
	exp : exp EQ . exp  (30)

	error  shift 1
	ID  shift 2
	STRING  shift 3
	INT  shift 4
	LPAREN  shift 5
	MINUS  shift 6
	IF  shift 7
	WHILE  shift 8
	FOR  shift 9
	LET  shift 10
	BREAK  shift 11
	NIL  shift 12
	.  error

	exp  goto 75
	lvalue  goto 15
	funcall  goto 16


state 42
	exp : exp NEQ . exp  (31)

	error  shift 1
	ID  shift 2
	STRING  shift 3
	INT  shift 4
	LPAREN  shift 5
	MINUS  shift 6
	IF  shift 7
	WHILE  shift 8
	FOR  shift 9
	LET  shift 10
	BREAK  shift 11
	NIL  shift 12
	.  error

	exp  goto 76
	lvalue  goto 15
	funcall  goto 16


state 43
	exp : exp LT . exp  (32)

	error  shift 1
	ID  shift 2
	STRING  shift 3
	INT  shift 4
	LPAREN  shift 5
	MINUS  shift 6
	IF  shift 7
	WHILE  shift 8
	FOR  shift 9
	LET  shift 10
	BREAK  shift 11
	NIL  shift 12
	.  error

	exp  goto 77
	lvalue  goto 15
	funcall  goto 16


state 44
	exp : exp LE . exp  (33)

	error  shift 1
	ID  shift 2
	STRING  shift 3
	INT  shift 4
	LPAREN  shift 5
	MINUS  shift 6
	IF  shift 7
	WHILE  shift 8
	FOR  shift 9
	LET  shift 10
	BREAK  shift 11
	NIL  shift 12
	.  error

	exp  goto 78
	lvalue  goto 15
	funcall  goto 16


state 45
	exp : exp GT . exp  (34)

	error  shift 1
	ID  shift 2
	STRING  shift 3
	INT  shift 4
	LPAREN  shift 5
	MINUS  shift 6
	IF  shift 7
	WHILE  shift 8
	FOR  shift 9
	LET  shift 10
	BREAK  shift 11
	NIL  shift 12
	.  error

	exp  goto 79
	lvalue  goto 15
	funcall  goto 16


state 46
	exp : exp GE . exp  (35)

	error  shift 1
	ID  shift 2
	STRING  shift 3
	INT  shift 4
	LPAREN  shift 5
	MINUS  shift 6
	IF  shift 7
	WHILE  shift 8
	FOR  shift 9
	LET  shift 10
	BREAK  shift 11
	NIL  shift 12
	.  error

	exp  goto 80
	lvalue  goto 15
	funcall  goto 16


state 47
	exp : exp AND . exp  (36)

	error  shift 1
	ID  shift 2
	STRING  shift 3
	INT  shift 4
	LPAREN  shift 5
	MINUS  shift 6
	IF  shift 7
	WHILE  shift 8
	FOR  shift 9
	LET  shift 10
	BREAK  shift 11
	NIL  shift 12
	.  error

	exp  goto 81
	lvalue  goto 15
	funcall  goto 16


state 48
	exp : exp OR . exp  (37)

	error  shift 1
	ID  shift 2
	STRING  shift 3
	INT  shift 4
	LPAREN  shift 5
	MINUS  shift 6
	IF  shift 7
	WHILE  shift 8
	FOR  shift 9
	LET  shift 10
	BREAK  shift 11
	NIL  shift 12
	.  error

	exp  goto 82
	lvalue  goto 15
	funcall  goto 16


state 49
	lvalue : lvalue LBRACK . exp RBRACK  (62)

	error  shift 1
	ID  shift 2
	STRING  shift 3
	INT  shift 4
	LPAREN  shift 5
	MINUS  shift 6
	IF  shift 7
	WHILE  shift 8
	FOR  shift 9
	LET  shift 10
	BREAK  shift 11
	NIL  shift 12
	.  error

	exp  goto 83
	lvalue  goto 15
	funcall  goto 16


state 50
	lvalue : lvalue DOT . ID  (61)

	ID  shift 84
	.  error


state 51
	exp : lvalue ASSIGN . exp  (42)

	error  shift 1
	ID  shift 2
	STRING  shift 3
	INT  shift 4
	LPAREN  shift 5
	MINUS  shift 6
	IF  shift 7
	WHILE  shift 8
	FOR  shift 9
	LET  shift 10
	BREAK  shift 11
	NIL  shift 12
	.  error

	exp  goto 85
	lvalue  goto 15
	funcall  goto 16


state 52
	exp : exp . PLUS exp  (26)
	exp : exp . MINUS exp  (27)
	exp : exp . TIMES exp  (28)
	exp : exp . DIVIDE exp  (29)
	exp : exp . EQ exp  (30)
	exp : exp . NEQ exp  (31)
	exp : exp . LT exp  (32)
	exp : exp . LE exp  (33)
	exp : exp . GT exp  (34)
	exp : exp . GE exp  (35)
	exp : exp . AND exp  (36)
	exp : exp . OR exp  (37)
	exp : error SEMICOLON exp .  (51)

	PLUS  shift 37
	MINUS  shift 38
	TIMES  shift 39
	DIVIDE  shift 40
	EQ  shift 41
	NEQ  shift 42
	LT  shift 43
	LE  shift 44
	GT  shift 45
	GE  shift 46
	AND  shift 47
	OR  shift 48
	$end  reduce 51
	COMMA  reduce 51
	SEMICOLON  reduce 51
	RPAREN  reduce 51
	RBRACK  reduce 51
	RBRACE  reduce 51
	THEN  reduce 51
	ELSE  reduce 51
	TO  reduce 51
	DO  reduce 51
	IN  reduce 51
	END  reduce 51
	FUNCTION  reduce 51
	VAR  reduce 51
	TYPE  reduce 51


state 53
	funcall : ID LPAREN RPAREN .  (52)

	.  reduce 52


state 54
	exp : exp . PLUS exp  (26)
	exp : exp . MINUS exp  (27)
	exp : exp . TIMES exp  (28)
	exp : exp . DIVIDE exp  (29)
	exp : exp . EQ exp  (30)
	exp : exp . NEQ exp  (31)
	exp : exp . LT exp  (32)
	exp : exp . LE exp  (33)
	exp : exp . GT exp  (34)
	exp : exp . GE exp  (35)
	exp : exp . AND exp  (36)
	exp : exp . OR exp  (37)
	para : exp .  (54)
	para : exp . COMMA para  (55)

	COMMA  shift 86
	PLUS  shift 37
	MINUS  shift 38
	TIMES  shift 39
	DIVIDE  shift 40
	EQ  shift 41
	NEQ  shift 42
	LT  shift 43
	LE  shift 44
	GT  shift 45
	GE  shift 46
	AND  shift 47
	OR  shift 48
	RPAREN  reduce 54


state 55
	funcall : ID LPAREN para . RPAREN  (53)

	RPAREN  shift 87
	.  error


state 56
	exp : exp . PLUS exp  (26)
	exp : exp . MINUS exp  (27)
	exp : exp . TIMES exp  (28)
	exp : exp . DIVIDE exp  (29)
	exp : exp . EQ exp  (30)
	exp : exp . NEQ exp  (31)
	exp : exp . LT exp  (32)
	exp : exp . LE exp  (33)
	exp : exp . GT exp  (34)
	exp : exp . GE exp  (35)
	exp : exp . AND exp  (36)
	exp : exp . OR exp  (37)
	exp : ID LBRACK exp . RBRACK OF exp  (39)
	lvalue : ID LBRACK exp . RBRACK  (63)

	RBRACK  shift 88
	PLUS  shift 37
	MINUS  shift 38
	TIMES  shift 39
	DIVIDE  shift 40
	EQ  shift 41
	NEQ  shift 42
	LT  shift 43
	LE  shift 44
	GT  shift 45
	GE  shift 46
	AND  shift 47
	OR  shift 48
	.  error


state 57
	ass : ID . EQ exp  (56)
	ass : ID . EQ exp COMMA ass  (57)

	EQ  shift 89
	.  error


state 58
	exp : ID LBRACE RBRACE .  (40)

	.  reduce 40


state 59
	exp : ID LBRACE ass . RBRACE  (41)

	RBRACE  shift 90
	.  error


state 60
	exp : LPAREN error RPAREN .  (50)

	.  reduce 50


state 61
	expseq : exp SEMICOLON . expseq  (59)

	error  shift 1
	ID  shift 2
	STRING  shift 3
	INT  shift 4
	LPAREN  shift 5
	MINUS  shift 6
	IF  shift 7
	WHILE  shift 8
	FOR  shift 9
	LET  shift 10
	BREAK  shift 11
	NIL  shift 12
	.  error

	exp  goto 23
	lvalue  goto 15
	expseq  goto 91
	funcall  goto 16


state 62
	exp : LPAREN expseq RPAREN .  (23)

	.  reduce 23


state 63
	exp : IF exp THEN . exp  (43)
	exp : IF exp THEN . exp ELSE exp  (44)

	error  shift 1
	ID  shift 2
	STRING  shift 3
	INT  shift 4
	LPAREN  shift 5
	MINUS  shift 6
	IF  shift 7
	WHILE  shift 8
	FOR  shift 9
	LET  shift 10
	BREAK  shift 11
	NIL  shift 12
	.  error

	exp  goto 92
	lvalue  goto 15
	funcall  goto 16


state 64
	exp : WHILE exp DO . exp  (45)

	error  shift 1
	ID  shift 2
	STRING  shift 3
	INT  shift 4
	LPAREN  shift 5
	MINUS  shift 6
	IF  shift 7
	WHILE  shift 8
	FOR  shift 9
	LET  shift 10
	BREAK  shift 11
	NIL  shift 12
	.  error

	exp  goto 93
	lvalue  goto 15
	funcall  goto 16


state 65
	exp : FOR ID ASSIGN . exp TO exp DO exp  (46)

	error  shift 1
	ID  shift 2
	STRING  shift 3
	INT  shift 4
	LPAREN  shift 5
	MINUS  shift 6
	IF  shift 7
	WHILE  shift 8
	FOR  shift 9
	LET  shift 10
	BREAK  shift 11
	NIL  shift 12
	.  error

	exp  goto 94
	lvalue  goto 15
	funcall  goto 16


state 66
	fundec : FUNCTION ID . LPAREN tyfields RPAREN EQ exp  (17)
	fundec : FUNCTION ID . LPAREN tyfields RPAREN COLON ID EQ exp  (18)

	LPAREN  shift 95
	.  error


state 67
	vardec : VAR ID . ASSIGN exp  (15)
	vardec : VAR ID . COLON ID ASSIGN exp  (16)

	COLON  shift 96
	ASSIGN  shift 97
	.  error


state 68
	tydec : TYPE ID . EQ ty  (7)

	EQ  shift 98
	.  error


state 69
	exp : LET decs IN . END  (48)
	exp : LET decs IN . expseq END  (49)

	error  shift 1
	ID  shift 2
	STRING  shift 3
	INT  shift 4
	LPAREN  shift 5
	MINUS  shift 6
	IF  shift 7
	WHILE  shift 8
	FOR  shift 9
	LET  shift 10
	END  shift 99
	BREAK  shift 11
	NIL  shift 12
	.  error

	exp  goto 23
	lvalue  goto 15
	expseq  goto 100
	funcall  goto 16


state 70
	decs : dec decs .  (2)

	.  reduce 2


state 71
	exp : exp . PLUS exp  (26)
	exp : exp PLUS exp .  (26)
	exp : exp . MINUS exp  (27)
	exp : exp . TIMES exp  (28)
	exp : exp . DIVIDE exp  (29)
	exp : exp . EQ exp  (30)
	exp : exp . NEQ exp  (31)
	exp : exp . LT exp  (32)
	exp : exp . LE exp  (33)
	exp : exp . GT exp  (34)
	exp : exp . GE exp  (35)
	exp : exp . AND exp  (36)
	exp : exp . OR exp  (37)

	TIMES  shift 39
	DIVIDE  shift 40
	$end  reduce 26
	COMMA  reduce 26
	SEMICOLON  reduce 26
	RPAREN  reduce 26
	RBRACK  reduce 26
	RBRACE  reduce 26
	PLUS  reduce 26
	MINUS  reduce 26
	EQ  reduce 26
	NEQ  reduce 26
	LT  reduce 26
	LE  reduce 26
	GT  reduce 26
	GE  reduce 26
	AND  reduce 26
	OR  reduce 26
	THEN  reduce 26
	ELSE  reduce 26
	TO  reduce 26
	DO  reduce 26
	IN  reduce 26
	END  reduce 26
	FUNCTION  reduce 26
	VAR  reduce 26
	TYPE  reduce 26


state 72
	exp : exp . PLUS exp  (26)
	exp : exp . MINUS exp  (27)
	exp : exp MINUS exp .  (27)
	exp : exp . TIMES exp  (28)
	exp : exp . DIVIDE exp  (29)
	exp : exp . EQ exp  (30)
	exp : exp . NEQ exp  (31)
	exp : exp . LT exp  (32)
	exp : exp . LE exp  (33)
	exp : exp . GT exp  (34)
	exp : exp . GE exp  (35)
	exp : exp . AND exp  (36)
	exp : exp . OR exp  (37)

	TIMES  shift 39
	DIVIDE  shift 40
	$end  reduce 27
	COMMA  reduce 27
	SEMICOLON  reduce 27
	RPAREN  reduce 27
	RBRACK  reduce 27
	RBRACE  reduce 27
	PLUS  reduce 27
	MINUS  reduce 27
	EQ  reduce 27
	NEQ  reduce 27
	LT  reduce 27
	LE  reduce 27
	GT  reduce 27
	GE  reduce 27
	AND  reduce 27
	OR  reduce 27
	THEN  reduce 27
	ELSE  reduce 27
	TO  reduce 27
	DO  reduce 27
	IN  reduce 27
	END  reduce 27
	FUNCTION  reduce 27
	VAR  reduce 27
	TYPE  reduce 27


state 73
	exp : exp . PLUS exp  (26)
	exp : exp . MINUS exp  (27)
	exp : exp . TIMES exp  (28)
	exp : exp TIMES exp .  (28)
	exp : exp . DIVIDE exp  (29)
	exp : exp . EQ exp  (30)
	exp : exp . NEQ exp  (31)
	exp : exp . LT exp  (32)
	exp : exp . LE exp  (33)
	exp : exp . GT exp  (34)
	exp : exp . GE exp  (35)
	exp : exp . AND exp  (36)
	exp : exp . OR exp  (37)

	.  reduce 28


state 74
	exp : exp . PLUS exp  (26)
	exp : exp . MINUS exp  (27)
	exp : exp . TIMES exp  (28)
	exp : exp . DIVIDE exp  (29)
	exp : exp DIVIDE exp .  (29)
	exp : exp . EQ exp  (30)
	exp : exp . NEQ exp  (31)
	exp : exp . LT exp  (32)
	exp : exp . LE exp  (33)
	exp : exp . GT exp  (34)
	exp : exp . GE exp  (35)
	exp : exp . AND exp  (36)
	exp : exp . OR exp  (37)
